<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UnionCash</string>
    <string name="home">首頁</string>
    <string name="card">卡片</string>
    <string name="total_assets">總資產</string>
    <string name="account">賬戶</string>
    <string name="transfer_in">轉入</string>
    <string name="transfer_out">轉出</string>
    <string name="view_pin">查看密碼</string>
    <string name="lock_unlock">掛失/解掛</string>
    <string name="account_security">帳戶 &amp; 安全</string> <!-- 新增的字串 -->
    <string name="identity_verification">身份認證</string> <!-- 新增的字串 -->
    <string name="account_management">賬戶管理</string> <!-- 新增的字串 -->
    <string name="address_book">地址簿</string> <!-- 新增的字串 -->
    <string name="service_fees">服務費用</string> <!-- 新增的字串 -->
    <string name="language_settings">語言設定</string>
    <string name="help">幫助</string>
    <string name="about_gsg_wallet">關於GSG Wallet</string>
    <string name="logout">登出</string>

    <!-- New strings for AccountSecurityActivity -->
    <string name="modify_phone_number">修改手機號碼</string>
    <string name="change_email">變更信箱</string>
    <string name="login_password">登入密碼</string>
    <string name="payment_password">支付密碼</string>
    <string name="face_fingerprint_login">面容/指紋登錄</string>

    <!-- Titles for BottomNavigationView -->
    <string name="title_home">首頁</string> <!-- 新增首頁標題 -->
    <string name="title_card">卡片</string> <!-- 新增卡片標題 -->
    <string name="title_account">賬戶</string> <!-- 新增賬戶標題 -->

    <!-- Button labels for HomeFragment -->
    <string name="recharge">充值</string>
    <string name="withdraw">提現</string>
    <string name="exchange">兌換</string>
    <string name="global_speed_transfer">全球速匯</string>
</resources>