<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <!-- 帳戶標題 -->
    <TextView
        android:id="@+id/tvAccountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_account"
        android:textSize="24sp"
        android:textColor="#7F4A9E"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 用户信息 -->
    <LinearLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvAccountTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvUserInitial"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_marginEnd="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUserPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="097****868"
                android:textSize="18sp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Chewei Yu"
                android:textSize="14sp"
                android:textColor="#000000" />
        </LinearLayout>

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <!-- 功能選項 -->
    <LinearLayout
        android:id="@+id/featureOptionsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:showDividers="middle"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/userInfoLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogout"
        app:layout_constraintVertical_bias="0.0">

        <!-- 帳戶 & 安全 -->
        <LinearLayout
            android:id="@+id/accountSecurityLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="none"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

            <!-- Icon for 帳戶 & 安全 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_account_security"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/account_security" />

            <!-- Text for 帳戶 & 安全 -->
            <TextView
                android:id="@+id/tvAccountSecurity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_security"
                android:textSize="16sp"
                android:textColor="#000000" />

            <!-- Arrow for 帳戶 & 安全 -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 身份認證 -->
        <LinearLayout
            android:id="@+id/identityVerificationLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="none"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackground">

        <!-- Icon for 身份認證 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_identity_verification"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/identity_verification" />

            <TextView
                    android:id="@+id/tvIdentityVerification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/identity_verification"
                    android:textSize="16sp"
                    android:textColor="#000000" />

            <!-- "待完善" 標籤 -->
            <TextView
                android:id="@+id/tvPendingCompletion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_pending_completion"
                android:textSize="14sp"
                android:textColor="#FFA500"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
            android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 賬戶管理 -->
        <LinearLayout
            android:id="@+id/accountManagementLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="none">

            <!-- Icon for 賬戶管理 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_account_management"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/account_management" />

            <TextView
                    android:id="@+id/tvAccountManagement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/account_management"
                    android:textSize="16sp"
                    android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
            android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 地址簿 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="middle">

            <!-- Icon for 地址簿 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_address_book"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/address_book" />

            <TextView
                android:id="@+id/tvAddressBook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address_book"
                android:textSize="16sp"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
            android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 服務費用 -->
        <LinearLayout
            android:id="@+id/serviceFeeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="middle">

            <!-- Icon for 服務費用 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_service_fee"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/service_fees" />

            <TextView
                android:id="@+id/tvServiceFee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/service_fees"
                android:textSize="16sp"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 語言設定 -->
        <LinearLayout
            android:id="@+id/language_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="none">

            <!-- Icon for 語言設定 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_language_settings"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/language_settings" />

            <TextView
                android:id="@+id/tvLanguageSettings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/language_settings"
                android:textSize="16sp"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
            android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 幫助 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="none">

            <!-- Icon for 幫助 -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_help"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/help" />

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/help"
                android:textSize="16sp"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>

        <!-- 關於GSG Wallet -->
        <LinearLayout
            android:id="@+id/aboutGSGWalletLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:showDividers="none">

            <!-- Icon for 關於GSG Wallet -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_about_wallet"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/about_gsg_wallet" />

            <TextView
                android:id="@+id/tvAboutGSGWallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_gsg_wallet"
                android:textSize="16sp"
                android:textColor="#000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Fragment 容器 -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- 登出标签 -->
    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 登出按鈕 -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        android:backgroundTint="#7F4A9E"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
